Added a bunch of stuff

--- a/src/pages/ministries.html
+++ b/src/pages/ministries.html
@@ -55,39 +55,39 @@
         </div><!--logo-->
         <div class="events">
         <h4>Upcoming Events:</h4>
-        <div class="event-listing">
+        <div class="event-lister">
             <div class="calendar-thumb">
                 <h5 class="date">17</h5>
                 <p class="month">Nov</p>
             </div><!--/calendar-thumb-->
-            <div class="event-listing-content">
+            <div class="event-lister-content">
                 <h5><a href="#">Awesome Activity</a></h5>
                 <p>All Day</p>
-                <a href="#" class="button hollow">More Info</a>
-            </div><!--/event-listing-content-->
-        </div><!--/event-listing-->
-        <div class="event-listing">
+                <a href="{{root}}event.html" class="button hollow">More Details</a>
+            </div><!--/event-lister-content-->
+        </div><!--/event-lister-->
+        <div class="event-lister">
             <div class="calendar-thumb">
                 <h5 class="date">17</h5>
                 <p class="month">Nov</p>
             </div><!--/calendar-thumb-->
-            <div class="event-listing-content">
+            <div class="event-lister-content">
                 <h5><a href="#">Awesome Activity</a></h5>
                 <p>All Day</p>
-                <a href="#" class="button hollow">More Info</a>
-            </div><!--/event-listing-content-->
-        </div><!--/event-listing-->
-        <div class="event-listing">
+                <a href="{{root}}event.html" class="button hollow">More Details</a>
+            </div><!--/event-lister-content-->
+        </div><!--/event-lister-->
+        <div class="event-lister">
             <div class="calendar-thumb">
                 <h5 class="date">17</h5>
                 <p class="month">Nov</p>
             </div><!--/calendar-thumb-->
-            <div class="event-listing-content">
+            <div class="event-lister-content">
                 <h5><a href="#">Awesome Activity</a></h5>
                 <p>All Day</p>
-                <a href="#" class="button hollow">More Info</a>
-            </div><!--/event-listing-content-->
-        </div><!--/event-listing-->
+                <a href="{{root}}event.html" class="button hollow">More Details</a>
+            </div><!--/event-lister-content-->
+        </div><!--/event-lister-->
         </div><!--/events-->
         <div class="site-wide-plugs">
 
